tests/fixtures/qml/reject/unknown_theme_token.qml
import QtQuick
import QtQuick.Controls.Material

Rectangle {
    width: 100
    height: 100
    color: Material.notAToken
}
